force-app/main/default/objects/Event_Expense_CF_Approver__mdt/Event_Expense_CF_Approver__mdt.object-meta.xml
<CustomObject>
    <description>vent Expense Product Approvers - LOB = CF</description>
    <label>Event Expense CF Approver</label>
    <pluralLabel>Event Expense CF Approver</pluralLabel>
</CustomObject>