force-app/main/default/objects/Event_Expense_CF_Approver__mdt/fields/Approver_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_User_Name__c</fullName>
    <label>Approver User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>