force-app/main/default/objects/Event_Expense_CF_Approver__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active User</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>