force-app/main/default/objects/Event_Expense_CF_Approver__mdt/fields/IsAdmin__c.field-meta.xml
<CustomField>
    <fullName>IsAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin User</description>
    <label>IsAdmin</label>
    <type>Checkbox</type>
</CustomField>