force-app/main/default/objects/Event_Expense_CF_Approver__mdt/listViews/All_Approvers.listView-meta.xml
<ListView>
    <fullName>All_Approvers</fullName>
    <columns>Approver_User_Name__c</columns>
    <columns>Approver_User_Id__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Classification__c</columns>
    <columns>Industry_Group__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsAdmin__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Approvers</label>
</ListView>